--- a/security_demo_selfconfig/pom.xml
+++ b/security_demo_selfconfig/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.eknown</groupId>
-    <artifactId>security_demo</artifactId>
+    <artifactId>security_demo_user</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>security_demo</name>
     <description>Spring Security Demo project for Spring Boot</description>
@@ -38,6 +38,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
         </dependency>
     </dependencies>
 
