实现基于前后端分离的登录、退出登录、基本权限判定功能

--- a/spring-security-template/src/main/resources/application.yml
+++ b/spring-security-template/src/main/resources/application.yml
@@ -13,6 +13,15 @@ spring:
       test-while-idle: true
     driver-class-name: com.mysql.jdbc.Driver
 
+  jackson:
+    serialization:
+      write-dates-as-timestamps: true
+
+  redis:
+    host: localhost
+    port: 6379
+    database: 1
+
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   configuration:
