--- a/spring-security-template-web/package.json
+++ b/spring-security-template-web/package.json
@@ -10,7 +10,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ajv": "^6.10.0",
+    "axios": "^0.19.0",
+    "element-ui": "^2.9.1",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
